# StartNewModule

./: .project  .pydevproject  AllTests.launch  AllTests.py.launch  CreateNewModule.py  StartNewModule.launch  StartNewModule.py  StartNewModule.wxg  license.txt  readme.txt
TemplateLibrary/: csnTemplateLibraryApps.py
TemplateLibrary/doc/: Modules.dox
TemplateLibrary/libmodules/tlFirst/include/: tlTemplate.h
TemplateLibrary/tests/tlFirstTest/: tlFirstTest.cpp  tlFirstTest.h
TemplatePlugin/: SandboxPlugin.cxx  SandboxPluginPCH.h  SandboxPluginProcessorCollective.cxx  SandboxPluginProcessorCollective.h  SandboxPluginWidgetCollective.cxx  SandboxPluginWidgetCollective.h  csnSandboxPlugin.py
TemplatePlugin/doc/: Modules.dox
TemplatePlugin/processors/: SandboxPluginResampleProcessor.cxx  SandboxPluginResampleProcessor.h  SandboxPluginShapeScaleProcessor.cxx  SandboxPluginShapeScaleProcessor.h  SandboxPluginSubtractProcessor.cxx  SandboxPluginSubtractProcessor.h
TemplatePlugin/widgets/SandboxPluginResamplePanelWidget/: SandboxPluginResamplePanelWidget.cpp  SandboxPluginResamplePanelWidget.h
TemplatePlugin/widgets/SandboxPluginShapeScalePanelWidget/: SandboxPluginShapeScalePanelWidget.cpp  SandboxPluginShapeScalePanelWidget.h
TemplatePlugin/widgets/SandboxPluginSubtractPanelWidget/: SandboxPluginSubtractPanelWidget.cpp  SandboxPluginSubtractPanelWidget.h
doc/: Doxyfile.doxy  MainPage.dox  licence.dox
resources/: about.txt  createWindowsExecutable.bat  logging.conf  readme.txt  setup.py
resources/TemplateCLP/: TemplateFilter.cxx  TemplateFilter.xml  csnTemplateFilter.py
resources/TemplateLibrary/: TemplateLibraryPCH.h  csnTemplateLibrary.py  csnTemplateLibraryApps.py
resources/TemplateLibrary/applications/tlAppFirst/: tlAppFirst.cpp
resources/TemplateLibrary/doc/: Doxyfile.doxy  MainPage.dox
resources/TemplateLibrary/tests/tlFirstTest/: tlFirstTest.cpp  tlFirstTest.h
resources/TemplatePlugin/: TemplatePlugin.cxx  TemplatePluginPCH.h  TemplatePluginProcessorCollective.cxx  TemplatePluginProcessorCollective.h  TemplatePluginWidgetCollective.cxx  TemplatePluginWidgetCollective.h  csnTemplatePlugin.py  plugin.xml
resources/TemplatePlugin/doc/: Doxyfile.doxy
resources/TemplatePlugin/processors/: TemplatePluginSandboxProcessor.cxx  TemplatePluginSandboxProcessor.h  TemplatePluginTemplProcessor.cxx  TemplatePluginTemplProcessor.h
resources/TemplatePlugin/widgets/TemplatePluginPanelWidget/: TemplatePluginSandboxPanelWidget.cpp  TemplatePluginSandboxPanelWidget.h  TemplatePluginSandboxPanelWidgetUI.cpp  TemplatePluginSandboxPanelWidgetUI.h  TemplatePluginSandboxPanelWidgetUI.wxg  TemplatePluginTemplPanelWidget.cpp  TemplatePluginTemplPanelWidgetUI.wxg
resources/TemplatePlugin13/: TemplatePlugin.cxx  TemplatePlugin.h  TemplatePluginWidgetCollective.h  csnTemplatePlugin.py  plugin.xml
resources/TemplatePlugin13/doc/: Doxyfile.doxy  MainPage.dox
resources/TemplatePlugin13/processors/: TemplatePluginTemplProcessor.cxx  TemplatePluginTemplProcessor.h  TemplatePluginTemplateWidgetProcessor.cxx  TemplatePluginTemplateWidgetProcessor.h
resources/TemplatePlugin13/tests/: templateTest.h
resources/TemplatePlugin13/widgets/TemplatePluginPanelWidget/: TemplatePluginTemplPanelWidget.cpp  TemplatePluginTemplPanelWidgetUI.cpp  TemplatePluginTemplPanelWidgetUI.h  TemplatePluginTemplPanelWidgetUI.wxg  TemplatePluginTemplateWidgetPanelWidget.cpp  TemplatePluginTemplateWidgetPanelWidget.h  TemplatePluginTemplateWidgetPanelWidgetUI.cpp
resources/TemplatePlugin14/: TemplatePlugin.cxx  TemplatePlugin.h  TemplatePluginProcessorCollective.cxx  TemplatePluginProcessorCollective.h  TemplatePluginWidgetCollective.cxx  TemplatePluginWidgetCollective.h  plugin.xml
resources/TemplatePlugin14/widgets/TemplatePluginPanelWidget/: TemplatePluginTemplPanelWidget.h  TemplatePluginTemplPanelWidgetUI.cpp  TemplatePluginTemplPanelWidgetUI.h
resources/TemplatePlugin15/: TemplatePlugin.h  TemplatePluginPCH.h  TemplatePluginProcessorCollective.h  TemplatePluginWidgetCollective.cxx  TemplatePluginWidgetCollective.h  csnTemplatePlugin.py  plugin.xml
resources/TemplatePlugin15/doc/: MainPage.dox
resources/TemplatePlugin15/processors/: TemplatePluginTemplateWidgetProcessor.cxx  TemplatePluginTemplateWidgetProcessor.h
resources/TemplateProject/TemplateProject_src/: csnTemplateProject.py  csnTemplateProjectToolkit.py
resources/TemplateProject/TemplateProject_src/thirdparties/: CMakeLists.txt
resources/TemplateProject/TemplateProject_src/thirdparties/cmakeMacros/: PlatformDependent.cmake  ThirdPartyLibMacros.cmake
resources/TemplateThirdParty/: CMakeLists.txt  TemplateThirdPartyConfig.cmake.in  UseTemplateThirdParty.cmake.in  csnTemplateThirdParty.py
src/: CreateNewModule.py  StartNewModule.py  StartNewModule.wxg  about.py  helpDialog.py  helpDialog.wxg  setup.py  utils.py
tests/: AllTests.bat  AllTests.py  AllTests.sh  CreateNewModuleTests.py  aboutTests.py  testslog.xml
(+6 files in other folders)
